# ecomm-prod-assistant

./: .gitignore  get_lib_versions.py  git-log-output.txt  main.py  pyproject.toml  requirements.txt
data/: product_reviews.csv
notebook/: rag_synthetic_testset.ipynb  ragas.ipynb  retrieval_comparison_demo.ipynb  test.ipynb
prod_assistant/etl/: data_ingestion.py  data_scrapper.py
prod_assistant/evaluation/: ragas_eval.py
prod_assistant/mcp_servers/: client.py  product_search_server.py
prod_assistant/prompt_library/: prompts.py
prod_assistant/retriever/: retrieval.py  retrieval_tess.py  retriever.py
prod_assistant/router/: main.py
prod_assistant/utils/: config_loader.py  model_loader.py
prod_assistant/workflow/: agentic_rag_workflow.py  agentic_workflow_with_mcp.py  agentic_workflow_with_mcp_websearch.py  normal_generation_workflow.py  normal_generation_workflow_tess.py
