[build-system]
requires = ["setuptools>=68"]         # PEP 660 editable support new for setuptools
build-backend = "setuptools.build_meta"

[project]
name = "ecomm-prod-assistant"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.116.1",
    "langchain==0.3.27",
    # TIP: Do not pin 'langchain-core' separately; 'langchain' will fetch the correct version.
    # If necessary, only pin compatible pairs.
    "python-dotenv==1.1.1",
    "streamlit==1.49.1",
]

# Optional: authors, license
authors = [{ name = "Sunny Savita" }]
license = { text = "Proprietary" }

# Optional: CLI command (python -m pip install -e . it will be created after)
[project.scripts]
ecomm-assistant = "ecomm_prod_assistant.cli:main"

[tool.setuptools.packages.find]
where = ["prod_assistant"]
include = ["ecomm_prod_assistant*"]